fix on firefox utilities box

--- a/css/aurum-styles.css
+++ b/css/aurum-styles.css
@@ -142,7 +142,7 @@ body {
 
 .item-container {
     width: 28.875rem;
-    height: 28.125rem;
+    height: auto;
     background-color: #fff;
 }
 
@@ -289,7 +289,7 @@ body {
     line-height: normal;
     background-color: #fff;
     text-align: center;
-    margin: 1.5rem;
+    margin: 1.2rem;
 }
 
 /* Starts surprises section */
